--- a/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kuechen-view.fxml
+++ b/src/main/resources/de/gfi/felix/abschlussprojekt/gui/kuechen-view.fxml
@@ -51,7 +51,7 @@
                               <Insets bottom="10.0" right="5.0" top="5.0" />
                           </FlowPane.margin>
                       </Button>
-                      <Button fx:id="btAbbrechen" mnemonicParsing="false" onAction="#onBtAbbrechenClick" prefWidth="75.0" text="Abbrechen">
+                      <Button fx:id="btAbbrechen" mnemonicParsing="false" onAction="#onBtAbbrechenClick" prefWidth="85.0" text="Abbrechen">
                           <FlowPane.margin>
                               <Insets bottom="10.0" right="25.0" top="5.0" />
                           </FlowPane.margin>
@@ -79,8 +79,8 @@
                   <children>
                       <TableView fx:id="tbTabelle" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                           <columns>
-                              <TableColumn fx:id="tcDatum" prefWidth="195.0" text="Datum" />
-                              <TableColumn fx:id="tcKuechenStatus" prefWidth="195.0" text="Küche ist geöffnet" />
+                              <TableColumn fx:id="tcDatum" prefWidth="220.0" text="Datum" />
+                              <TableColumn fx:id="tcKuechenStatus" prefWidth="220.0" text="Küche ist geöffnet" />
                           </columns>
                       </TableView>
                       <FlowPane prefHeight="200.0" prefWidth="200.0">
@@ -118,7 +118,7 @@
                                       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                   </FlowPane.margin>
                               </Label>
-                              <DatePicker fx:id="dpVon" onAction="#onDpVonAction" prefWidth="125.0">
+                              <DatePicker fx:id="dpVon" onAction="#onDpVonAction" prefWidth="110.0">
                                   <FlowPane.margin>
                                       <Insets bottom="5.0" top="5.0" />
                                   </FlowPane.margin>
@@ -128,17 +128,17 @@
                                       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                   </FlowPane.margin>
                               </Label>
-                              <DatePicker fx:id="dpBis" onAction="#onDpBisAction" prefWidth="125.0">
+                              <DatePicker fx:id="dpBis" onAction="#onDpBisAction" prefWidth="110.0">
                                   <FlowPane.margin>
                                       <Insets bottom="5.0" top="5.0" />
                                   </FlowPane.margin>
                               </DatePicker>
-                        <Button fx:id="btOffen" mnemonicParsing="false" onAction="#onBtOffenClick" prefWidth="60.0" text="Offen">
+                        <Button fx:id="btOffen" mnemonicParsing="false" onAction="#onBtOffenClick" prefWidth="75.0" text="Offen">
                            <FlowPane.margin>
                               <Insets bottom="5.0" left="5.0" top="5.0" />
                            </FlowPane.margin>
                         </Button>
-                              <Button fx:id="btGeschlossen" mnemonicParsing="false" onAction="#onBtGeschlossenClick" prefWidth="60.0" text="Zu">
+                              <Button fx:id="btGeschlossen" mnemonicParsing="false" onAction="#onBtGeschlossenClick" prefWidth="85.0" text="Geschlossen">
                                   <FlowPane.margin>
                                       <Insets bottom="5.0" left="5.0" top="5.0" />
                                   </FlowPane.margin>
